# kadopon-server

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
ext/entityx/: CMakeLists.txt
ext/ws/: CMakeLists.txt
lua/: Character.lua  DamageInstance.lua  example.lua
lua/combat/: Chara.hpp  CombatInstance.lua
scripts/hooks/: commit-msg  commit-msg.py
src/: CMakeLists.txt  javascript_client_example.html  main.cpp  main2.cpp  sws-poc-main.cpp  ws-client.py
src/boards/: Board.cpp  Board.hpp
src/character/: CharacterFactory.cpp  CharacterFactory.hpp
src/combat/: Chara.hpp  CombatInstance.cpp  CombatInstance.hpp  CombatInstance.lua  DamageInstance.cpp  DamageInstance.hpp
src/components/: Attributes.hpp  Components.hpp  Life.hpp  Mana.hpp  ModifierList.hpp  ScalingComponent.hpp
src/components/attributes/: Attribute.hpp  Attributes.hpp  Life.hpp
src/components/modifiers/: AdditiveLife.hpp  AdditiveModifier.hpp  BaseModifier.hpp  FlatLife.hpp  FlatModifier.hpp  IncreasedLife.hpp  Modifier.hpp  Modifiers.hpp  MultiplicativeLife.hpp  MultiplicativeModifier.hpp
src/core/api/: KadoponAPI.hpp  NetworkAPI.cpp  NetworkAPI.hpp
src/core/instance/: GameInstance.cpp  GameInstance.hpp
src/core/server/: KadoponMain.cpp  KadoponMain.hpp
src/entities/: Character.cpp  Character.hpp  Item.cpp  Item.hpp
src/instance/: GameInstance.cpp  GameInstance.hpp
src/misc/: Constants.hpp  Position.hpp  Types.hpp
src/modifiers/: IncreasedModifier.hpp  Modifier.hpp
src/rng/: rng.hpp  xorshift.cpp  xorshift.hpp
src/systems/: ScalingModifierSystem.cpp  ScalingModifierSystem.hpp
src/tiles/: Tile.hpp
src/utilities/: BoardgameUtilities.cpp  BoardgameUtilities.hpp  ItemUtilities.cpp  ItemUtilities.hpp  ModifierUtilities.cpp  ModifierUtilities.hpp  Random.cpp  Random.hpp  RandomUtilities.cpp  RandomUtilities.hpp
tests/: CMakeLists.txt  catch_sample.cpp  crypto_test.cpp  ex.cpp  fmt.cpp  io_test.cpp  main.cpp  parse_test.cpp
tests/boardgame/: boardgame.cpp  boardgame_creation.cpp
tests/character/: character_factory.cpp  create_character.cpp
tests/combat/: damage_instance.cpp
tests/entityx/: Dependencies_test.cc  Entity_test.cc  Event_test.cc  Pool_test.cc  System_test.cc  TagsComponent_test.cc
tests/instance/: instance_creation.cpp
tests/misc/: position.cpp
tests/modifiers/: increased_vs_more.cpp  item_applies_modifiers.cpp
tests/random/: movement.cpp  random.cpp
tests/rng/: rng.cpp
